--- a/angular-troika-app/src/app/app.html
+++ b/angular-troika-app/src/app/app.html
@@ -1,5 +1,11 @@
 <div class="container">
-  <h1>Hello World - Troika.js with Angular 20</h1>
-  <p>This is a bare bones Angular 20 application demonstrating troika-three-text</p>
-  <canvas #canvas></canvas>
+  <nav>
+    <a routerLink="/">Home</a> |
+    <a routerLink="/graph">Graph</a>
+  </nav>
+  <div class="header-container">
+    <h1>Hello World - Troika.js with Angular 20</h1>
+    <p>This is a bare bones Angular 20 application demonstrating troika-three-text</p>
+  </div>
+  <router-outlet></router-outlet>
 </div>
