Update app toolbar title and graphing example header; adjust controls bar alignment

--- a/angular-troika-app/src/app/app.html
+++ b/angular-troika-app/src/app/app.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span>Troika.js with Angular 20</span>
+  <span>three.js and troika.js with Angular 20</span>
   <span class="spacer"></span>
   <button mat-button routerLink="/">
     <mat-icon>home</mat-icon>
@@ -7,14 +7,10 @@
   </button>
   <button mat-button routerLink="/graph">
     <mat-icon>bar_chart</mat-icon>
-    Graph
+    Graphing Examples
   </button>
 </mat-toolbar>
 
 <div class="container">
-  <div class="header-container">
-    <h1>Hello World - Troika.js with Angular 20</h1>
-    <p>This is a bare bones Angular 20 application demonstrating troika-three-text</p>
-  </div>
   <router-outlet></router-outlet>
 </div>
