--- a/angular-troika-app/src/app/graph/graph.scss
+++ b/angular-troika-app/src/app/graph/graph.scss
@@ -7,7 +7,7 @@
 
 .controls-bar {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     padding: 16px 24px;
     background-color: #f5f5f5;
